# thinkbench

./: .gitignore  NOTICE  README.md  TASKS.md  manifest.json
results/minimax-m3-vs-glm-5.2/: ARTICLE.md  OBSERVATIONS.md  RESULTS.md  results.json
runner/: Cargo.toml  models.json
runner/src/: file_tools.rs  main.rs  process_env.rs  worker.rs
tasks/auditlog/: brief.txt
tasks/backoff/: brief.txt  grade.py
tasks/base62/: brief.txt  grade.py
tasks/budgetrules/: brief.txt  grade.py
tasks/cachelab/: brief.txt  grade.py
tasks/cachelayer/: brief.txt
tasks/cachetags/: brief.txt  grade.py
tasks/calceval/: brief.txt  grade.py
tasks/cellsim/: brief.txt  grade.py
tasks/condschema/: brief.txt  grade.py
tasks/confstack/: brief.txt  grade.py
tasks/cronmatch/: brief.txt  grade.py
tasks/cronsim/: brief.txt  grade.py
tasks/csvgroupby/: brief.txt  grade.py
tasks/csvparse/: brief.txt  grade.py
tasks/csvql/: brief.txt  grade.py
tasks/cursorpage/: brief.txt  grade.py
tasks/datespan/: brief.txt  grade.py
tasks/decimalfmt/: brief.txt  grade.py
tasks/deepget/: brief.txt  grade.py
tasks/docsearch/: brief.txt
tasks/eventbus/: brief.txt  grade.py
tasks/featureflags/: brief.txt
tasks/flagwise/: brief.txt  grade.py
tasks/formvalidate/: brief.txt
tasks/graphbip/: brief.txt  grade.py
tasks/graphpath/: brief.txt  grade.py
tasks/hsm/: brief.txt  grade.py
tasks/intervalmerge/: brief.txt  grade.py
tasks/jobflow/: brief.txt
tasks/jsonquery/: brief.txt  grade.py
tasks/kvtxn/: brief.txt  (+1 more)
tools/: README.md  analyze_run.py  build_dataset.py
(+437 files in other folders)
